--- a/utils.css
+++ b/utils.css
@@ -143,6 +143,11 @@
   background-color: var(--bg-clr) !important;
 }
 
+.is-info, .active{
+  background-color: var(--bg-clr) !important;
+  color: white;
+}
+
 .button{
   border: 2px solid var(--bg-clr);
   color: var(--bg-clr);
@@ -163,6 +168,8 @@
   background-color: var(--hv-clr) !important;
   color: white;
 }
+
+
 
 .tagline{
   font-size: 24px;
