--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ h3{
   min-height: 500px;
 }
 
+#editor{
+  opacity: 0;
+  transition: 0.5s;
+}
+
 #main{
   padding: 30px;
   padding-right: 40px;
